Fix Add-100 button to actually add 100

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 
 	========================================================================
 
-	Point-Region Quad Tree
+	Point-Region Quadtree
 	
 	Copyright (C) 2017 Roland Rytz <roland@draemm.li>
 	Licensed under the GNU Affero General Public License Version 3
